NEWS
================
<Erik.Leppo@tetratech.com>

<!-- NEWS.md is generated from NEWS.Rmd. Please edit that file -->

    #> Last Update: 2023-08-11 10:07:38.992966

# Version History

## Changes in Version 0.1.0.9018 (2023-08-11)

- style: Edits to Site Summary report
- style: Edits to build summary function

## Changes in Version 0.1.0.9017 (2022-11-16)

- refactor: Modified build_summary function
  - Modify example to use files from tempdir
    - Copy first
  - Add example of clickable URL to Excel example

## Changes in Version 0.1.0.9016 (2022-09-22)

- fix: Correct code in build_summary, Issue \#5
  - Undoes correction made in Issue \#3

## Changes in Version 0.1.0.9015 (2022-08-18)

- fix: Uncomment the failing parts of the shiny code in the full version

## Changes in Version 0.1.0.9014 (2022-08-18)

- feature: Add slim version of Shiny app that works on server
  - Retained full version that only runs on PC
  - Added example to runShiny function

## Changes in Version 0.1.0.9013 (2022-08-12)

- fix: Add Shiny (EMVL) required packages to DESCRIPTION

## Changes in Version 0.1.0.9012 (2022-08-12)

- feature: Update shiny with EMVL version
  - Made changes to run on Linux server (ShinyApps.io)
  - Minor edits in style (e.g., returns and outlining)
  - Minor edits for text for boxes
- refactor: Rename original shiny ‘test’
- refactor: Update runShiny function to handle two app versions
  - Update example

## Changes in Version 0.1.0.9011 (2022-08-03)

- refactor: Update missing data report, Issue \#4

## Changes in Version 0.1.0.9010 (2022-07-28)

- refactor: Update missing data report, Issue \#4

## Changes in Version 0.1.0.9009 (2022-07-27)

- feature: Add missing data report function, Issue \#4

## Changes in Version 0.1.0.9008 (2022-07-12)

- fix: Update merge statement in build_summary, Issue \#3

## Changes in Version 0.1.0.9007 (2022-07-12)

- partial update with site summary report, Issue \#2

## Changes in Version 0.1.0.9006 (2022-02-04)
