@@ -4,7 +4,7 @@ NEWS
 
 <!-- NEWS.md is generated from NEWS.Rmd. Please edit that file -->
 
-    #> Last Update: 2023-08-11 10:07:38.992966
+    #> Last Update: 2023-08-11 13:01:04.690781
 
 # Version History
 
@@ -12,6 +12,8 @@ NEWS
 
 - style: Edits to Site Summary report
 - style: Edits to build summary function
+- refactor: Create Multi-Site Summary Report
+- fix: Correct table building in Site Summary report to include 1st row
 
 ## Changes in Version 0.1.0.9017 (2022-11-16)
 
